# LLM-video-agent

./: README.md  docker-compose.yml  example.env  main.py  pyproject.toml
app/config/: database.py  redis_client.py
app/controllers/: chat_controller.py  ingest_controller.py
app/models/: core_models.py
app/routes/: chat_routes.py  ingest_routes.py
app/schemas/: chat_schema.py  ingest_schema.py
app/services/: memory_service.py
