[project]
name = "videochat"
version = "0.1.0"
description = "interact with video LLM agent microservice"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.124.4",
    "litellm>=1.80.10",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "sqlalchemy2-stubs>=0.0.2a38",
]
